--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,15 +57,15 @@ header p {
     margin: 0 25%;
 }
 
-#complete h2 {
+#completePage h2 {
     font-size: 32px;
 }
 
-#complete form, p {
+#completePage form, p {
     font-size: 24px;
 }
 
-#complete input {
+#completePage input {
     font-size: 18px;
     border-radius: 5px;
 }
