--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,10 @@ header p {
 #question {
     font-size: 32px;
 }
+#rightWrong {
+    font-size: 44px;
+    font-weight: lighter;
+}
 
 #answerButtons {
     flex: display;
